refactor: use mimalloc DO NOT MERGE